## models.py
from django.db import models


class User(models.Model):
    username = models.CharField(max_length=255)
    email = models.EmailField()
    password = models.CharField(max_length=255)

    def create_community(self, name: str, description: str) -> 'Community':
        return Community.objects.create(name=name, description=description)

    def join_community(self, community_id: int) -> None:
        community = Community.objects.get(id=community_id)
        community.users.add(self)

    def customize_settings(self, settings: dict) -> None:
        # Update user settings
        pass

    def report_content(self, content_id: int, reason: str) -> None:
        Report.objects.create(user=self, content_id=content_id, reason=reason)


class Community(models.Model):
    name = models.CharField(max_length=255)
    description = models.TextField()
    users = models.ManyToManyField(User)

    def create_discussion(self, title: str, content: str) -> 'Discussion':
        return Discussion.objects.create(community=self, title=title, content=content)

    def join(self, user_id: int) -> None:
        user = User.objects.get(id=user_id)
        self.users.add(user)

    def customize_settings(self, settings: dict) -> None:
        # Update community settings
        pass


class Discussion(models.Model):
    community = models.ForeignKey(Community, on_delete=models.CASCADE)
    title = models.CharField(max_length=255)
    content = models.TextField()

    def create_comment(self, user_id: int, content: str) -> 'Comment':
        return Comment.objects.create(discussion=self, user_id=user_id, content=content)


class Comment(models.Model):
    discussion = models.ForeignKey(Discussion, on_delete=models.CASCADE)
    user_id = models.IntegerField()
    content = models.TextField()


class Report(models.Model):
    content_id = models.IntegerField()
    reason = models.TextField()
    status = models.CharField(max_length=255)

    def resolve(self) -> None:
        # Resolve the report
        pass


class Moderation(models.Model):
    content_id = models.IntegerField()
    status = models.CharField(max_length=255)

    def review(self) -> None:
        # Review the moderation
        pass

    def approve(self) -> None:
        # Approve the moderation
        pass

    def reject(self) -> None:
        # Reject the moderation
        pass
