classDiagram
    class User{
        +id: int
        +username: str
        +email: str
        +password: str
        +create_community(name: str, description: str) -> Community
        +join_community(community_id: int) -> Community
        +customize_settings(settings: dict) -> None
        +report_content(content_id: int, reason: str) -> None
    }
    class Community{
        +id: int
        +name: str
        +description: str
        +create_discussion(title: str, content: str) -> Discussion
        +join(user_id: int) -> None
        +customize_settings(settings: dict) -> None
    }
    class Discussion{
        +id: int
        +title: str
        +content: str
        +create_comment(user_id: int, content: str) -> Comment
    }
    class Comment{
        +id: int
        +content: str
        +user_id: int
    }
    class Report{
        +id: int
        +content_id: int
        +reason: str
        +status: str
        +resolve() -> None
    }
    class Moderation{
        +id: int
        +content_id: int
        +status: str
        +review() -> None
        +approve() -> None
        +reject() -> None
    }
    User "1" -- "N" Community: creates
    User "1" -- "N" Community: joins
    User "1" -- "N" Report: reports
    Community "1" -- "N" Discussion: creates
    Community "1" -- "N" User: joins
    Discussion "1" -- "N" Comment: has
    Comment "1" -- "1" User: belongs to
    Report "1" -- "1" User: belongs to
    Moderation "1" -- "1" User: belongs to
